# DirectPipe

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DirectPipe-Development-Plan-v3.1.md  DirectPipe-Development-Plan.md  LICENSE  README.md  SECURITY.md  TESTING.md  THIRD_PARTY.md
.claude/: settings.local.json
.github/workflows/: build.yml  macos-build.yml
com.directpipe.directpipe.sdPlugin/: .sdignore  manifest.json  package.json  rollup.config.mjs
com.directpipe.directpipe.sdPlugin/scripts/: generate-icons.mjs  package.mjs
com.directpipe.directpipe.sdPlugin/src/: plugin.js  websocket-client.js
com.directpipe.directpipe.sdPlugin/src/actions/: bypass-toggle.js  ipc-toggle.js  monitor-toggle.js  panic-mute.js  performance-monitor.js  plugin-param.js  preset-bar.js  preset-switch.js  recording-toggle.js  render-cache.js  volume-control.js
com.directpipe.directpipe.sdPlugin/src/inspectors/: bypass-pi.html  performance-pi.html  plugin-param-pi.html  preset-pi.html  volume-pi.html
com.directpipe.directpipe.sdPlugin/src/utils/: host-api.js  icon-renderer.js
core/: CMakeLists.txt
core/include/directpipe/: Constants.h  Protocol.h  RingBuffer.h  SharedMemory.h
core/src/: RingBuffer.cpp  SharedMemory.cpp
docs/: API_EXAMPLES.md  ARCHITECTURE.md  AUTOGAIN_PLUGIN_GUIDE.md  AUTO_DESIGN.md  BUILDING.md  CONTROL_API.md  FEATURE_AUTO_MODE.md  FEATURE_PER_PLUGIN_LATENCY.md  FEATURE_SAFETY_LIMITER.md  LOGRULE.md  MAINTENANCE_RULES.md  PLATFORM_GUIDE.md  PRODUCT_SPEC.md  QUICKSTART.md  ReleaseNote.md  STREAMDECK_GUIDE.md  USER_GUIDE.md
docs/superpowers/plans/: 2026-03-13-maincomponent-split.md  2026-03-13-v4-comprehensive-improvement.md  2026-03-13-v4-phase0-cherrypick.md  2026-03-16-builtin-processors.md  2026-03-16-safety-limiter.md  2026-03-17-documentation-accuracy-improvement.md  2026-03-18-v4-bugfix-audit-round2.md
docs/superpowers/specs/: 2026-03-18-v4-bugfix-audit-round2-design.md  (+2 more)
driver/: README.md  build.bat  check_endpoint.ps1  clean-reinstall.bat  create-device.bat  diagnose.ps1  install.bat  rebuild-install.bat  resign-install.bat  set-volume-100.ps1  sign-test.bat
driver/inf/: virtualloop.inf
driver/src/: adapter.cpp  miniport.cpp  shm_kernel_reader.cpp  stream.cpp
driver/test/: driver_test.cpp
host/: CMakeLists.txt
host/Resources/: Entitlements.plist  MacOSXBundleInfo.plist  make_icon.py
host/Source/: ActionResult.h  Main.cpp  MainComponent.cpp  MainComponent.h
host/Source/Audio/: AudioEngine.cpp  AudioEngine.h  AudioRecorder.cpp  AudioRecorder.h  AudioRingBuffer.h  BuiltinAutoGain.cpp  BuiltinAutoGain.h  BuiltinFilter.cpp  BuiltinFilter.h  BuiltinNoiseRemoval.cpp  BuiltinNoiseRemoval.h  DeviceState.h  LatencyMonitor.cpp  LatencyMonitor.h  MonitorOutput.cpp  MonitorOutput.h  OutputRouter.cpp  OutputRouter.h  PluginLoadHelper.h  PluginPreloadCache.cpp  PluginPreloadCache.h  README.md  SafetyLimiter.cpp  SafetyLimiter.h  VSTChain.cpp  VSTChain.h  VirtualMicOutput.cpp  VirtualMicOutput.h
host/Source/Control/: ActionDispatcher.cpp  ActionDispatcher.h  ActionHandler.cpp  ActionHandler.h  ControlManager.cpp  ControlManager.h  ControlMapping.cpp  ControlMapping.h  HotkeyHandler.cpp  HotkeyHandler.h  HttpApiServer.cpp  HttpApiServer.h  Log.cpp  Log.h  MidiHandler.cpp  MidiHandler.h  README.md  SettingsAutosaver.cpp  SettingsAutosaver.h  StateBroadcaster.cpp  StateBroadcaster.h  WebSocketServer.cpp  WebSocketServer.h
host/Source/IPC/: SharedMemWriter.cpp  SharedMemWriter.h
host/Source/Platform/: AutoStart.h  MultiInstanceLock.h  PlatformAudio.h  PlatformStubs.cpp  ProcessPriority.h
host/Source/Platform/Linux/: LinuxAutoStart.cpp  LinuxMultiInstanceLock.cpp  LinuxProcessPriority.cpp
host/Source/Platform/Windows/: WindowsAutoStart.cpp  WindowsMultiInstanceLock.cpp  WindowsProcessPriority.cpp
host/Source/Platform/macOS/: MacAutoStart.cpp  MacMultiInstanceLock.cpp  MacProcessPriority.cpp
host/Source/UI/: AGCEditPanel.cpp  AGCEditPanel.h  AudioSettings.cpp  AudioSettings.h  ControlSettingsPanel.cpp  ControlSettingsPanel.h  DeviceSelector.cpp  DeviceSelector.h  DirectPipeLookAndFeel.cpp  DirectPipeLookAndFeel.h  FilterEditPanel.cpp  FilterEditPanel.h  HotkeyTab.cpp  HotkeyTab.h  LevelMeter.cpp  LevelMeter.h  LogPanel.cpp  LogPanel.h  MidiTab.cpp  MidiTab.h  NoiseRemovalEditPanel.cpp  NoiseRemovalEditPanel.h  NotificationBar.cpp  NotificationBar.h  OutputPanel.cpp  OutputPanel.h  PluginChainEditor.cpp  PluginChainEditor.h  PluginScanner.cpp  PluginScanner.h  PresetManager.cpp  PresetManager.h  PresetSlotBar.cpp  PresetSlotBar.h  README.md  SettingsExporter.cpp  SettingsExporter.h  StatusUpdater.cpp  StatusUpdater.h  StreamDeckTab.cpp  (+3 more)
host/Source/Util/: AtomicFileIO.h  ScopedGuard.h  StrongIndex.h  ThreadOwned.h
installer/: directpipe.iss
installer/assets/: license.txt
obs-plugin/: CMakeLists.txt
obs-plugin/data/locale/: en-US.ini  ko-KR.ini
obs-plugin/src/: directpipe-source.c  directpipe-source.h  plugin-main.c  shm-reader.c  shm-reader.h
plugins/receiver/: CMakeLists.txt
plugins/receiver/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
streamdeck-plugin/: .sdignore  manifest.json  package-lock.json  package.json
streamdeck-plugin/scripts/: generate-icons.mjs  package.mjs
streamdeck-plugin/src/: plugin.js  websocket-client.js
tests/: CMakeLists.txt  ipc_test_child.cpp  test_action_dispatcher.cpp  test_action_handler.cpp  test_action_result.cpp  test_audio_engine.cpp  test_builtin_auto_gain.cpp  test_builtin_noise_removal.cpp  test_builtin_processors.cpp  test_control_mapping.cpp  test_cross_process_ipc.cpp  test_ipc_integration.cpp  test_latency.cpp  test_midi_handler.cpp  test_notification_queue.cpp  test_output_router.cpp  test_platform.cpp  test_preset_manager.cpp  test_receiver_simulation.cpp  test_ring_buffer.cpp  test_safety_limiter.cpp  test_settings_autosaver.cpp  test_settings_exporter.cpp  test_shared_memory.cpp  test_vst_chain.cpp  test_websocket_protocol.cpp
tools/: check_text_integrity.py  midi-test.py  pre-release-dashboard.html  pre-release-test.sh
(+8 files in other folders)
